# meatshell-app

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVLOG.md  data.json  index.html  package-lock.json  package.json  reasonix.toml  tailwind.config.ts  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
.trae/rules/: project_rules.md
OpenTermo-fixed/: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVLOG.md  LICENSE  README.en.md  README.md  index.html  tailwind.config.ts  tsconfig.node.json
OpenTermo-fixed/.github/workflows/: ci.yml
OpenTermo-fixed/meatshell/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md
OpenTermo-fixed/meatshell/assets/: install-linux.sh  make_icon.py  meatshell.desktop
OpenTermo-fixed/meatshell/lang/en/LC_MESSAGES/: meatshell.po
OpenTermo-fixed/meatshell/lang/zh/LC_MESSAGES/: meatshell.po
OpenTermo-fixed/meatshell/packaging/aur/: PKGBUILD  README.md
OpenTermo-fixed/meatshell/src/: command.rs  config.rs  i18n.rs  known_hosts.rs  lib.rs  proxy.rs  ssh.rs  system.rs  telnet.rs
OpenTermo-fixed/meatshell/wix/: main.wxs
OpenTermo-fixed/src/: App.tsx  index.css
OpenTermo-fixed/src-tauri/: Cargo.toml  tauri.conf.json
OpenTermo-fixed/src-tauri/capabilities/: default.json
OpenTermo-fixed/src-tauri/src/: commands.rs  lib.rs  main.rs  prompts.rs  session.rs
OpenTermo-fixed/src/components/: CommandPanel.tsx  ConnectDialog.tsx  CredentialDialog.tsx  EditSessionDialog.tsx  HostKeyDialog.tsx  SessionManager.tsx  SettingsPanel.tsx
OpenTermo-fixed/src/lib/: tauriCommands.ts  themeUtils.ts  utils.ts
OpenTermo-fixed/src/stores/: sessionStore.ts  settingsStore.ts  uiStore.ts
Taleb_Universe/: index.html  wild.html
Taleb_Universe/css/: style.css  wild.css
Taleb_Universe/js/: global.js  wild.js
css/: main.css
gcp-firewall/: README.md  cdn-block.service  cdn_block.sh  cdn_ips.txt
js/: nav-manager.js
js/modules/: event-handler.js  renderer.js
lang/en/LC_MESSAGES/: meatshell.po
lang/zh/LC_MESSAGES/: meatshell.po
meatshell/src/: config.rs  serial.rs  ssh.rs  system.rs  telnet.rs  zmodem.rs
scripts/: generate-icon.mjs
src/: App.tsx  app.rs  config.rs  forward.rs  i18n.rs  index.css  lib.rs  main.rs  sftp.rs  ssh.rs  system.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  icon_data.rs  lib.rs  logger.rs  main.rs  session.rs
src/components/: AddCommandDialog.tsx  ClusterPanel.tsx  CommandPalette.tsx  CommandPanel.tsx  ConnectDialog.tsx  CredentialDialog.tsx  EditSessionDialog.tsx  HostKeyDialog.tsx  SessionManager.tsx  SettingsPanel.tsx
src/components/layout/: FileExplorer.tsx  PortForwardPanel.tsx  ResizablePanel.tsx  Sidebar.tsx  StatusBar.tsx  TerminalView.tsx  TitleBar.tsx
src/components/ui/: button.tsx  context-menu.tsx  dialog.tsx  input.tsx  tabs.tsx
src/hooks/: useWindowDrag.ts
src/lib/: tauriCommands.ts  utils.ts
src/stores/: commandStore.ts  sessionStore.ts  settingsStore.ts  uiStore.ts
ui/: app.slint  session_dialog.slint  sftp_panel.slint  sidebar.slint  terminal_view.slint  theme.slint  welcome.slint
(+7 files in other folders)
