[package]
name = "opentermo"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
meatshell = { path = "../meatshell" }
russh = "0.49"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
