[package]
name = "meatshell"
version = "0.4.12"
edition = "2021"
authors = ["一坨肉 (jeff141) and meatshell contributors"]
description = "A lightweight SSH/terminal client backend library written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeff141/meatshell"
readme = "README.md"
rust-version = "1.75"

[lib]
name = "meatshell"
path = "src/lib.rs"

[[bin]]
name = "meatshell"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time", "fs"] }
russh = "0.49"
russh-keys = "0.49"
ssh-key = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
async-trait = "0.1"
futures = "0.3"
vt100 = "0.15"
russh-sftp = "2"
arboard = "3"
# Zeroes password buffers on drop so plaintext credentials don't linger in
# freed heap memory (core dumps / debuggers / /proc/pid/mem).
zeroize = "1"
# SOCKS5 proxy tunnelling for SSH/SFTP in network-restricted environments.
# (HTTP CONNECT proxies are handled in src/proxy.rs without an extra crate.)
tokio-socks = "0.5"
base64 = "0.22"
# Cross-platform serial port access for the Serial session type (#14, #17).
# Opens COM3 / /dev/ttyUSB0 etc.; on Linux the default `libudev` feature is
# used for port enumeration (CI installs libudev-dev).
serialport = "4"
# ChaCha20-Poly1305 AEAD for encrypting passwords at rest in sessions.json.
# rand (OsRng) and base64 are already pulled in by other deps above.
chacha20poly1305 = "0.10"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1
